Bug 438758 - New created shape doesn't use the right color for border
Summary: New created shape doesn't use the right color for border
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Tools/Vector (other bugs)
Version First Reported In: nightly build (please specify the git hash!)
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-06-16 17:34 UTC by grum999
Modified: 2021-07-28 18:15 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description grum999 2021-06-16 17:34:25 UTC
SUMMARY

From KA  topic
https://krita-artists.org/t/vector-shapes-filled-with-gradient-bug/25114/2?u=grum999


STEPS TO REPRODUCE
Download attached example file

1. Create a vector shape, with line color + fill color.

2. Select shape, Change fill color

3. Draw a new shape with border line color defined as color brush.
   =>The color brush is not applied (applied: last color used to fill previous shape)

4. Change color brush.
   => Draw a new shape: color is properly used.

5. Select first shape, change fill color again.
   => Draw a new shape: last color used to fill previous shape is used instead of color brush



OBSERVED RESULT
See description in steps to reproduce


EXPECTED RESULT
When drawing a shape, color should be color defined by tool, not last color used to fill a shape



SOFTWARE/OS VERSIONS
krita-5.0.0-prealpha-4f029a8-x86_64.appimage


ADDITIONAL INFORMATION
See video example and additional information on KA topic


Grum999
Comment 1 sh_zam 2021-06-23 17:24:03 UTC
Can confirm the bug. 

This sync problem is caused by using signal blockers in KoFillConfigWidget::slotProposeCurrentColorToResourceManager, which was used to stop the StrokeFill from changing the Fill type.
Comment 2 grum999 2021-07-27 16:32:59 UTC
Hi

According to discussion on KA, I add a link here to KA post to think about it when bug will be fixed

https://krita-artists.org/t/bug-changing-fill-color-of-vector-adds-a-stroke-to-shape/26611/4?u=grum999

Grum999
Comment 3 Dmitry Kazakov 2021-07-28 06:10:32 UTC
Git commit 6ebbd5279e1859b641e6a569184058b09e58dd8d by Dmitry Kazakov, on behalf of Sharaf Zaman.
Committed on 28/07/2021 at 06:09.
Pushed by dkazakov into branch 'master'.

Bugfix: Fix sync problem between resource and shape

M  +85   -74   libs/ui/widgets/KoFillConfigWidget.cpp
M  +2    -2    libs/ui/widgets/KoFillConfigWidget.h
M  +14   -4    plugins/tools/defaulttool/defaulttool/DefaultToolTabbedWidget.cpp

https://invent.kde.org/graphics/krita/commit/6ebbd5279e1859b641e6a569184058b09e58dd8d
Comment 4 grum999 2021-07-28 18:15:13 UTC
Hi

Tested last appimage (krita-5.0.0-prealpha-ee23c60-x86_64.appimage) and I can confirm all problems are fixed :) 



Grum999