Bugfix: Fix sync problem between resource and shape

BUG:438758